<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
        <item
            android:id="@+id/eventsFragment"
            android:icon="@drawable/ic_events"
            android:title="@string/event"
            tools:ignore="MenuTitle"

            />
        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/addFragment"
            android:icon="@drawable/ic_add"
            android:title="@string/add" />
        <item
            android:id="@+id/likesFragment"
            android:icon="@drawable/ic_heart"
            android:title="@string/like" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

</menu>