<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashBackground"
    tools:context=".screens.log_in.views.LogInTypesFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/splashBackground"
        tools:context=".screens.splash.SplashFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/log_in_types_background"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteY="1dp">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo_colored"
                    app:layout_constraintBottom_toTopOf="@+id/guideline6"
                    app:layout_constraintEnd_toStartOf="@+id/guideline7"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/guideline5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/event"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/guideline6"
                    app:layout_constraintEnd_toStartOf="@+id/guideline4"
                    app:layout_constraintStart_toStartOf="@+id/guideline8"
                    app:layout_constraintTop_toTopOf="@+id/guideline5" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/for_further_work"
                    android:textAlignment="center"
                    android:textColor="@color/secondText"

                    android:textStyle="normal"

                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/guideline10"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline9" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/email_sign"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/blue_button"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/email_sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:backgroundTint="@null"
                    app:icon="@drawable/ic_baseline_email_24"
                    app:iconGravity="textEnd"
                    android:foreground="@drawable/ripple_effect"

                    app:iconTint="@null"
                    app:layout_constraintBottom_toTopOf="@+id/guideline12"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline11" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/google_sign"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/secondarybutton"
                    android:foreground="@drawable/ripple_effect"
                    android:enabled="false"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/google_sign_up"

                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:icon="@drawable/ic_google_svg"
                    app:iconGravity="textEnd"
                    app:backgroundTint="@null"

                    app:iconTint="@null"
                    app:layout_constraintBottom_toTopOf="@+id/guideline14"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline13" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sign_up_link"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:foreground="@drawable/ripple_effect"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="center"
                    android:text="@string/already_a_member"
                    android:textAllCaps="false"
                    android:textColor="@color/white"

                    app:autoSizeMaxTextSize="36dp"
                    app:autoSizeMinTextSize="14dp"
                    app:autoSizeStepGranularity="12dp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/guideline24"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline23"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.10" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.90" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.21" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.28" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.20" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.80" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.30" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.35" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.30" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.35" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.50" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.57" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.60" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.67" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.85" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.88" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</FrameLayout>