<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.evapps.event.screens.log_in.view_models.ForgetPasswordViewModel" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.log_in.views.ForgetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/splashBackground"
        tools:context=".screens.splash.SplashFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/log_in_back"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteY="1dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="bottom"
                    android:text="@string/recover"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/guideline6"
                    app:layout_constraintEnd_toStartOf="@+id/guideline19"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/recive"
                    android:textAlignment="textStart"
                    android:textColor="@color/secondText"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/guideline9"
                    app:layout_constraintEnd_toStartOf="@+id/guideline19"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline10" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/container_glass"
                    android:orientation="vertical"

                    app:layout_constraintBottom_toTopOf="@+id/guideline14"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline12" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    style="@style/MyEditText"

                    app:layout_constraintBottom_toTopOf="@+id/guideline17"
                    app:layout_constraintEnd_toStartOf="@+id/guideline27"
                    app:layout_constraintStart_toStartOf="@+id/guideline26"
                    app:layout_constraintTop_toTopOf="@+id/guideline21">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                       />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.10" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="49dp"
                    app:layout_constraintGuide_percent="0.14" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="370dp"
                    app:layout_constraintGuide_percent="0.90" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="39dp"
                    app:layout_constraintGuide_percent="0.85" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.12" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.18" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.22" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.19" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.52" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.28" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.59" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.61" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.40" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.32" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.44" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.68" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.74" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.54" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.60" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.64" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.67" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.70" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="288dp"
                    app:layout_constraintGuide_percent="0.20" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.80" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:theme="@style/MyEditText"

                    app:layout_constraintBottom_toTopOf="@+id/imageView3"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline21" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/primarrybuton"
                    app:backgroundTint="@null"
                    android:enabled="false"
                    android:fontFamily="@font/ubuntu_regular"
                    android:foreground="@drawable/ripple_effect"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/guideline20"
                    app:layout_constraintEnd_toStartOf="@+id/guideline33"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline32"
                    app:layout_constraintTop_toTopOf="@+id/guideline28"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="center"
                    android:onClick="@{(v)->viewModel.goToLogIn()}"
                    android:paddingRight="1dp"
                    android:text="@string/never_a_user"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:foreground="@drawable/ripple_effect"

                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline23"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline22" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="center"
                    android:onClick="@{(v)->viewModel.goToSignUp()}"
                    android:foreground="@drawable/ripple_effect"
                    android:text="@string/already_a_member"
                    android:textAllCaps="false"
                    android:textColor="@color/white"

                    android:autoSizeMaxTextSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline35"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline34"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>
</layout>